# spotify_rsm2

./: .gitignore  Analysis.py  CONDUCT.md  LICENSE  README.md  compute_analysis.py  load_data.py  pyproject.toml
configs/: system_config.yml  user_config.yml
notebooks/: EDA.ipynb  Spotify_ApiCall.ipynb  scratch.ipynb
src/spotify_rsm2/: Analysis.py  plot_data.py
tests/: test_compute_analysis.py  test_load_data.py  testing_data.csv
